--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
     "puppeteer": "^24.34.0",
     "reflect-metadata": "^0.2.2",
